crates/px4-workqueue/tests/trybuild/fail/missing_wq.rs
#![feature(type_alias_impl_trait)]

use px4_workqueue::task;

#[task]
async fn nope() {}

fn main() {}
